###
# Library source
###
set (STLINK2_LUA_LIBRARY_SOURCE
	"lib.c"
)

set(STLINK2_HAS_LUA True CACHE INTERNAL "stlink2 has lua enabled")

set(STLINK2_LUA_LIBRARY_STATIC ${PROJECT_NAME}-lua-static CACHE INTERNAL "stlink2 lua static library")
add_library(${STLINK2_LUA_LIBRARY_STATIC} STATIC ${STLINK2_LUA_LIBRARY_SOURCE})
set_target_properties(${STLINK2_LUA_LIBRARY_STATIC} PROPERTIES OUTPUT_NAME ${PROJECT_NAME} PREFIX "")

#set(STLINK2_LUA_LIBRARY_SHARED ${PROJECT_NAME}-lua-shared CACHE INTERNAL "stlink2 lua shared library")
#add_library(${STLINK2_LUA_LIBRARY_SHARED} SHARED ${STLINK2_LUA_LIBRARY_SOURCE})
#set_target_properties(${STLINK2_LUA_LIBRARY_SHARED} PROPERTIES OUTPUT_NAME ${PROJECT_NAME} PREFIX "")
#target_link_libraries(${STLINK2_LUA_LIBRARY_SHARED} ${STLINK2_LIBRARY_STATIC} ${LUA_LIBRARY_SHARED})
